app/assets/stylesheets/components/insights/c-article.scss
.c-article {
  background-color: $color-4;
  padding: 68px 0;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.15);

  .c-article-header .container > div {
    border-bottom: 1px solid $border-color;
  }

  header {
    text-align: center;

    h1 {
      margin: 0 0 15px 0;
      letter-spacing: -1.9px;
    }

    .container {
      display: flex;
      justify-content: center;
    }

    .index-link {
      display: inline-block;
      margin: 0 0 26px;
      color: $color-1;
      font-family: $font-family-2;
      font-size: $font-size-s;
      font-weight: bold;
    }

    .authorship {
      display: block;
      margin: 0 0 50px;

      color: $color-5;
      font-family: $font-family-2;
      font-size: $font-size-small;
      font-weight: bold;

      > .author-name {
        color: $color-1;
      }

      &.-has-workstream {
        margin: 30px 0 0;
      }
    }

    .workstream {
      display: block;
      margin: 15px 0 40px;


      color: $color-5;
      font-family: $font-family-2;
      font-size: $font-size-s;
      text-transform: uppercase;
    }
  }

  .article-content {
    padding: 30px 0;

    .article-text {
      display: flex;
      justify-content: center;

      h1 {
        margin: 30px 0 15px;
        font-family: $font-family-2;
        font-size: $font-size-xm;
        letter-spacing: -1px;
      }

      h2 {
        margin: 25px 0;
        font-family: $font-family-2;
        font-size: $font-size-xs;
        text-transform: uppercase;
      }

      // We want all the links to have the same colour,
      // even the nested ones
      a {
        font-family: $font-family-2;
        color: $color-1;
      }

      img {
        max-width: 100%;
        box-shadow: 0 2px 3px 0 rgba($color-6, .15);
      }

      blockquote {
        margin: 30px 0 45px; // Bottom margin compensates the lack of <br/> in the block
        text-align: center;

        > p {
          font-family: $font-family-2;
          font-size: $font-size-xxm;
          font-weight: $font-weight-bold;
        }
      }

      ul,
      ol {
        display: block;
        margin: 1em 0;
        padding-left: 20px;
        line-height: 1.38;
        word-wrap: break-word;

        li { display: list-item; }

        li + li {
          margin-top: 25px;
        }

        &.link-list {
          padding: 0;
          margin: 2em 0;

          > .link-item {
            list-style: none;

            & + .link-item {
              margin-top: 15px;
            }
          }
        }
      }

      ul li { list-style: disc; }

      ol {
        counter-reset: ol-item;

        li {
          text-indent: -15px;
          list-style-type: none;
          counter-increment: ol-item;

          &::before {
            display: inline-block;
            width: 20px;
            padding-right: 10px;
            text-align: right;
            font-size: $font-size-xs;
            font-weight: $font-weight-bold;
            content: counter(ol-item) ".";
          }
        }
      }

      p {
        // If the link is within a tag <strong>, we want the weight to be
        // bold and not what's defined in typography.scss
        a {
          font-weight: inherit;
        }
      }

      table {
        margin: 15px 0;  // Compensate the lack of space before and after
        box-shadow: 0 2px 3px 0 rgba($color-6, .15);

        tr {
          td {
            padding: 20px;
          }

          th {
            padding: 20px;
            background-color: $color-4;
            text-align: left;
            font-weight: $font-weight-bold;
          }

          &:nth-child(2n) {
            td {
              background-color: $color-4;
            }
          }
        }
      }

      .youtube-embed-wrapper {
        margin: 25px 0;
        box-shadow: 0 2px 3px 0 rgba($color-6, .15);

        @media #{$mq-tablet} {
          margin: 35px 0;
        }
      }
    }

    .footer-article {
      display: flex;
      justify-content: center;
      margin: 60px 0 0;
    }
  }
}

